@@ -18,12 +18,12 @@ import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.docmosis.DocmosisDocument;
 import uk.gov.hmcts.reform.civil.model.docmosis.casepogression.JudgeFinalOrderForm;
 import uk.gov.hmcts.reform.civil.referencedata.LocationRefDataException;
-import uk.gov.hmcts.reform.civil.referencedata.LocationRefDataService;
 import uk.gov.hmcts.reform.civil.referencedata.model.LocationRefData;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.service.docmosis.DocmosisTemplates;
 import uk.gov.hmcts.reform.civil.service.docmosis.DocumentGeneratorService;
 import uk.gov.hmcts.reform.civil.service.docmosis.TemplateDataGenerator;
+import uk.gov.hmcts.reform.civil.service.referencedata.LocationReferenceDataService;
 import uk.gov.hmcts.reform.civil.utils.MonetaryConversions;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
@@ -33,7 +33,6 @@ import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 import static java.util.Objects.nonNull;
@@ -56,7 +55,7 @@ public class JudgeFinalOrderGenerator implements TemplateDataGenerator<JudgeFina
     private final DocumentManagementService documentManagementService;
     private final DocumentGeneratorService documentGeneratorService;
     private final IdamClient idamClient;
-    private final LocationRefDataService locationRefDataService;
+    private final LocationReferenceDataService locationRefDataService;
     private final FeatureToggleService featureToggleService;
     private LocationRefData caseManagementLocationDetails;
 
@@ -180,7 +179,7 @@ public class JudgeFinalOrderGenerator implements TemplateDataGenerator<JudgeFina
             .furtherHearingLength(getFurtherHearingLength(caseData))
             .datesToAvoid(getDatesToAvoid(caseData))
             .showFurtherHearingLocationAlt(isDefaultCourt(caseData))
-            .furtherHearingLocationDefault(LocationRefDataService.getDisplayEntry(caseManagementLocationDetails))
+            .furtherHearingLocationDefault(LocationReferenceDataService.getDisplayEntry(caseManagementLocationDetails))
             .furtherHearingLocationAlt(getFurtherHearingLocationAlt(caseData))
             .furtherHearingMethod(getFurtherHearingMethod(caseData))
             .hearingNotes(getHearingNotes(caseData))
@@ -635,7 +634,7 @@ public class JudgeFinalOrderGenerator implements TemplateDataGenerator<JudgeFina
         List<LocationRefData> matchingLocations = locationRefDataService.getCourtLocationsByEpimmsId(
                         authorisation, caseData.getCaseManagementLocation().getBaseLocation())
                 .stream().filter(id -> id.getCourtTypeId().equals(CIVIL_COURT_TYPE_ID))
-                .collect(Collectors.toList());
+                .toList();
 
         if (matchingLocations.size() != 1) {
             throw new LocationRefDataException(
@@ -646,7 +645,7 @@ public class JudgeFinalOrderGenerator implements TemplateDataGenerator<JudgeFina
                 ));
         }
 
-        return LocationRefDataService.getDisplayEntry(matchingLocations.get(0));
+        return LocationReferenceDataService.getDisplayEntry(matchingLocations.get(0));
     }
 
     private String getHearingLocationText(CaseData caseData, String authorisation) {
